recruit포스터 위치

--- a/startbootstrap-freelancer-4-dev/index.html
+++ b/startbootstrap-freelancer-4-dev/index.html
@@ -149,8 +149,9 @@
             <h2 class="text-center">Recruit</h2>
             <hr class="star-light">
             <div class="row">
-                <div class="col-lg-7 offset-lg-4">
-                    <p>2017_하나와영_지원서_바로가기 <a href="https://docs.google.com/forms/d/1zzdaD3WoSQajDMonyk57-hAFk59DdYMBFult9gunfO4/closedform"><img src="img/recruit.png" width=300 alt=""></a></p>
+                <div class="offset-lg-4">
+                  <p>2017_하나와영_지원서_바로가기</p>
+                  <p><a href="https://docs.google.com/forms/d/1zzdaD3WoSQajDMonyk57-hAFk59DdYMBFult9gunfO4/closedform"> <img src="img/recruit.png" width=300 alt=""></a></p>
                 </div>
 
 
